--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "template",
-  "version": "0.1.0",
+  "version": "next",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "framer-motion": "4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "workbox-webpack-plugin": "6.2.0"
   }
 }
