--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pg0817h.github.io/portfolio",
+  "homepage": "https://pg0817h.github.io/portfolio/",
   "name": "template",
   "version": "0.1.0",
   "private": true,
